[package]
name = "nzsc_single_player_web"
version = "0.2.0"
authors = ["Kyle Lin <kylejlin.us@gmail.com>"]

repository = "https://github.com/nzsc-org/nzsc_single_player_web"

license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.4"
nzsc_single_player = "0.3.0"

[profile.release]
lto = true
opt-level = "z"
